<resources>
    <string name="app_name">Proyecto-TP3-Kotlin</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="sex">Sex</string>
    <string name="nombre">Nombre</string>
    <string name="peso">Peso</string>
    <string name="raza">Raza</string>
    <string name="sub_raza">Sub Raza</string>
    <string name="dueño">Dueño: </string>
    <string name="adoptar">Adoptar</string>
    <string name="descripcionPerro">Imagen del perro</string>
    <string name="descipcionUbicacion">Simbolo ubicacion</string>
    <string name="descripcionTelefono">Boton para llamar al telefono</string>
    <string name="navigation_drawer_open">"Abrir"</string>
    <string name="navigation_drawer_close">"Cerrar"</string>
    <string name="No_favs">"No tienes perros en tu lista de favoritos!"</string>
    <string name="No_adopts">"No adoptaste perros aún!"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>