<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="337dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/imagen_login_perro" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/Nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre"
                android:textSize="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/Ubicacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Ubicacion"
                android:textSize="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Nombre" />

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="45dp"
                android:text="@string/sex"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Ubicacion" />

            <TextView
                android:id="@+id/peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="45dp"
                android:text="@string/peso"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@+id/sex"
                app:layout_constraintTop_toBottomOf="@+id/Ubicacion" />

            <TextView
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Male"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/sex"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/dueño"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/dueño"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/peso" />

            <TextView
                android:id="@+id/kg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:text="2kg"
                android:textColor="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/peso"
                app:layout_constraintStart_toEndOf="@+id/Male" />

            <Button
                android:id="@+id/Adoptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="70dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/adoptar"
                android:textSize="20dp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="98dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sex"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="6dp"
                android:text="Nombre del dueño"
                android:textSize="20dp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/dueño" />

            <TextView
                android:id="@+id/edad2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="18dp"
                android:text="19"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edad" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>