<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="337dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/descripcionPerro"
            app:srcCompat="@drawable/imagen_login_perro" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="365dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="207dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Nombre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        tools:text="nombre"
                        android:textColor="@color/darker_grey"
                        android:textFontWeight="600"
                        android:textSize="24sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family" />

                    <LinearLayout
                        android:layout_width="129dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/descipcionUbicacion"
                            app:srcCompat="@drawable/ubicacion"/>

                        <TextView
                            android:id="@+id/Ubicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="Ubicacion"
                            android:textColor="@color/darker_grey"
                            android:textFontWeight="400"
                            android:textSize="18sp"
                            android:textStyle="normal"
                            app:fontFamily="@font/poppins_font_family" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Edad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edad"
                        android:textAlignment="center"
                        android:textColor="@color/darker_grey"
                        android:textFontWeight="500"
                        android:textSize="22sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family" />

                    <TextView
                        android:id="@+id/EdadNumero"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="19"
                        android:textAlignment="center"
                        android:textFontWeight="500"
                        android:textSize="22sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_marginTop="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/SexPerro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Male"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textFontWeight="500"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family" />

                    <TextView
                        android:id="@+id/Sex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/PesoPerro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="2Kg"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textFontWeight="500"
                        android:textSize="14sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family"/>

                    <TextView
                        android:id="@+id/Peso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/peso"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimary"
                        android:textFontWeight="400"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="383dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="41dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="Imagen del dueño"
                    app:srcCompat="@android:drawable/sym_def_app_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Dueño"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dueño"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textFontWeight="400"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family"/>

                    <TextView
                        android:id="@+id/NombreDelDueño"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="descipcionDueño"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp"
                        android:textFontWeight="500"
                        android:textStyle="normal"
                        app:fontFamily="@font/poppins_font_family"/>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/imageView4"
                    android:layout_width="10dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/descripcionTelefono"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/telefono" />

            </LinearLayout>

            <Button
                android:id="@+id/Adoptar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:height="70dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/adoptar"
                android:textFontWeight="600"
                android:textSize="14sp"
                android:textStyle="normal"
                app:fontFamily="@font/poppins_font_family"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>